[gd_scene load_steps=6 format=3 uid="uid://main_menu"]

[ext_resource type="Script" path="res://scenes/main/main_menu.gd" id="1_main"]

[sub_resource type="StyleBoxFlat" id="glass_panel"]
bg_color = Color(1, 1, 1, 0.85)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1.0, 0.85, 0.9, 0.7)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
shadow_color = Color(0.6, 0.3, 0.5, 0.2)
shadow_size = 20
shadow_offset = Vector2(0, 8)

[sub_resource type="StyleBoxFlat" id="button_normal"]
bg_color = Color(1.0, 0.45, 0.65, 1)
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 5
border_color = Color(0.85, 0.28, 0.48, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.5, 0.2, 0.4, 0.35)
shadow_size = 6
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="button_hover"]
bg_color = Color(1.0, 0.55, 0.72, 1)
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 5
border_color = Color(0.9, 0.38, 0.58, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.5, 0.2, 0.4, 0.45)
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="button_pressed"]
bg_color = Color(0.9, 0.38, 0.55, 1)
border_width_left = 0
border_width_top = 3
border_width_right = 0
border_width_bottom = 2
border_color = Color(0.75, 0.22, 0.42, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main")

[node name="BackgroundGradient" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1.0, 0.94, 0.96, 1)

[node name="BackgroundAccentTop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 180.0
grow_horizontal = 2
color = Color(1.0, 0.88, 0.92, 1)

[node name="BackgroundAccentBottom" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
color = Color(0.98, 0.85, 0.9, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ContentPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(440, 560)
layout_mode = 2
theme_override_styles/panel = SubResource("glass_panel")

[node name="VBox" type="VBoxContainer" parent="CenterContainer/ContentPanel"]
layout_mode = 2
theme_override_constants/separation = 22

[node name="Spacer1" type="Control" parent="CenterContainer/ContentPanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/ContentPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_colors/font_color = Color(0.22, 0.12, 0.35, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
text = "üß© Sudoku Pets"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CenterContainer/ContentPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.55, 0.4, 0.6, 1)
text = "Solve puzzles, collect cute pets!"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/ContentPanel/VBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="PlayButton" type="Button" parent="CenterContainer/ContentPanel/VBox"]
custom_minimum_size = Vector2(340, 72)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("button_normal")
theme_override_styles/hover = SubResource("button_hover")
theme_override_styles/pressed = SubResource("button_pressed")
text = "‚ñ∂  Play"

[node name="PetsButton" type="Button" parent="CenterContainer/ContentPanel/VBox"]
custom_minimum_size = Vector2(340, 72)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("button_normal")
theme_override_styles/hover = SubResource("button_hover")
theme_override_styles/pressed = SubResource("button_pressed")
text = "üê±  My Pets"

[node name="SettingsButton" type="Button" parent="CenterContainer/ContentPanel/VBox"]
custom_minimum_size = Vector2(340, 72)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("button_normal")
theme_override_styles/hover = SubResource("button_hover")
theme_override_styles/pressed = SubResource("button_pressed")
text = "‚öô  Settings"

[node name="Spacer3" type="Control" parent="CenterContainer/ContentPanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="PlayerInfo" type="HBoxContainer" parent="CenterContainer/ContentPanel/VBox"]
layout_mode = 2
alignment = 1

[node name="GoldLabel" type="Label" parent="CenterContainer/ContentPanel/VBox/PlayerInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.85, 0.55, 0.08, 1)
text = "ü™ô 100"

[node name="Spacer" type="Control" parent="CenterContainer/ContentPanel/VBox/PlayerInfo"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="LevelLabel" type="Label" parent="CenterContainer/ContentPanel/VBox/PlayerInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.75, 0.5, 0.15, 1)
text = "‚≠ê Level 1"

[connection signal="pressed" from="CenterContainer/ContentPanel/VBox/PlayButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CenterContainer/ContentPanel/VBox/PetsButton" to="." method="_on_pets_pressed"]
[connection signal="pressed" from="CenterContainer/ContentPanel/VBox/SettingsButton" to="." method="_on_settings_pressed"]
